--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<div class="primary-menu-container header-menu-container">
 			<ul id="primary-menu" class="menu"><li id="menu-item-31" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item menu-item-31"><a href="index.html" aria-current="page">Home</a></li>
 <li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="who_we_are.html">Who We Are</a></li>
-<li id="menu-item-252" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-252"><a href="service.html/">Services</a></li>
+<li id="menu-item-252" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-252"><a href="service.html">Services</a></li>
 <!-- <li id="menu-item-34" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.htmlcontact/">Contact</a></li> -->
 </ul>		</div>
 	</nav><!-- #site-navigation -->
