--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			<ul id="primary-menu" class="menu"><li id="menu-item-31" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item menu-item-31"><a href="index.html" aria-current="page">Home</a></li>
 <li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="who_we_are.html">Who We Are</a></li>
 <li id="menu-item-252" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-252"><a href="service.html">Services</a></li>
-<!-- <li id="menu-item-34" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.htmlcontact/">Contact</a></li> -->
+<!-- <li id="menu-item-34" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.html">Contact</a></li> -->
 </ul>		</div>
 	</nav><!-- #site-navigation -->
 	</div><!-- data-section="primary_navigation" -->
@@ -584,7 +584,7 @@
 
 
 
-<div class="wp-block-kadence-advancedbtn kb-buttons-wrap kb-btns28_7ab582-95"><a class="kb-button kt-button button kb-btn28_0e103f-7e kt-btn-size-standard kt-btn-width-type-auto kb-btn-global-inherit kt-btn-has-text-true kt-btn-has-svg-false wp-block-button__link wp-block-kadence-singlebtn" href="index.htmlcontact/"><span class="kt-btn-inner-text">Get in Touch Now</span></a></div>
+<div class="wp-block-kadence-advancedbtn kb-buttons-wrap kb-btns28_7ab582-95"><a class="kb-button kt-button button kb-btn28_0e103f-7e kt-btn-size-standard kt-btn-width-type-auto kb-btn-global-inherit kt-btn-has-text-true kt-btn-has-svg-false wp-block-button__link wp-block-kadence-singlebtn" href="index.html"><span class="kt-btn-inner-text">Get in Touch Now</span></a></div>
 </div></div>
 
 </div></div></div><!-- .entry-content -->
@@ -631,7 +631,7 @@
 
 
 
-<!-- <li class="has-medium-font-size"><a href="index.htmlcontact/"><strong>Contact</strong></a></li> -->
+<!-- <li class="has-medium-font-size"><a href="index.html"><strong>Contact</strong></a></li> -->
 </ul>
 </section>	</div>
 </div><!-- .footer-widget2 -->
@@ -734,7 +734,7 @@
 			<ul id="mobile-menu" class="menu has-collapse-sub-nav"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item menu-item-31"><a href="index.html" aria-current="page">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="who_we_are.html">Who We Are</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-252"><a href="service.html">Services</a></li>
-<!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.htmlcontact/">Contact</a></li> -->
+<!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.html">Contact</a></li> -->
 </ul>		</div>
 	</nav><!-- #site-navigation -->
 	</div><!-- data-section="mobile_navigation" -->
