--- a/service.html
+++ b/service.html
@@ -141,7 +141,7 @@
 			<ul id="primary-menu" class="menu"><li id="menu-item-31" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-31"><a href="index.html">Home</a></li>
 <li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="who_we_are.html">Who We Are</a></li>
 <li id="menu-item-252" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-111 current_page_item menu-item-252"><a href="service.html" aria-current="page">Services</a></li>
-<!-- <li id="menu-item-34" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.htmlcontact/">Contact</a></li> -->
+<!-- <li id="menu-item-34" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.html">Contact</a></li> -->
 </ul>		</div>
 	</nav><!-- #site-navigation -->
 	</div><!-- data-section="primary_navigation" -->
@@ -297,7 +297,7 @@
 
 
 
-<!-- <li class="has-medium-font-size"><a href="index.htmlcontact/"><strong>Contact</strong></a></li> -->
+<!-- <li class="has-medium-font-size"><a href="index.html"><strong>Contact</strong></a></li> -->
 </ul>
 </section>	</div>
 </div><!-- .footer-widget2 -->
@@ -400,7 +400,7 @@
 			<ul id="mobile-menu" class="menu has-collapse-sub-nav"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-31"><a href="index.html">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="who_we_are.html">Who We Are</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-111 current_page_item menu-item-252"><a href="service.html" aria-current="page">Services</a></li>
-<!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.htmlcontact/">Contact</a></li> -->
+<!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-34"><a href="index.html">Contact</a></li> -->
 </ul>		</div>
 	</nav><!-- #site-navigation -->
 	</div><!-- data-section="mobile_navigation" -->
