--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
 
 
-<p class="kt-adv-heading28_64afb7-eb wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_64afb7-eb">Our concrete safety managers are always on site to offer proactive measures to keep any concrete related project safe.</p>
+<p class="kt-adv-heading28_64afb7-eb wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_64afb7-eb">Our DOB Licensed Safety managers are always on site to offer key measures to keep any related project safe.</p>
 
 
 
@@ -744,6 +744,7 @@
 	<style id="core-block-supports-inline-css">
 .wp-container-core-columns-is-layout-1{flex-wrap:nowrap;}
 </style>
+<meta name="description" content="Discover Modern Consulting(www.modernconsulting.net): Expert site safety management, DOB-certified services, and licensed safety managers to ensure compliance and safety on every project.">
 <script id="kadence-navigation-js-extra">
 var kadenceConfig = {"screenReader":{"expand":"Child menu","expandOf":"Child menu of","collapse":"Child menu","collapseOf":"Child menu of"},"breakPoints":{"desktop":"1024","tablet":768},"scrollOffset":"0"};
 </script>
@@ -925,6 +926,7 @@ rowLayout.style.backgroundImage = 'url("P_back2.png")';</script>
 
 	
 </style>
+
 
 <style>
 	* {
