Fix to description

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
 
 
-<p class="kt-adv-heading28_64afb7-eb wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_64afb7-eb">Our DOB Licensed Safety managers are always on site to offer key measures to keep any related project safe.</p>
+<p class="kt-adv-heading28_64afb7-eb wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_64afb7-eb">Our DOB Licensed Safety Managers are always on site to offer key measures to keep any related project safe.</p>
 
 
 
