--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
 
 
-<p class="kt-adv-heading28_ca0eea-d0 wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_ca0eea-d0">Our certified manager will ensure that the job site is safe and compliant to national standard.</p>
+<p class="kt-adv-heading28_ca0eea-d0 wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_ca0eea-d0">Our certified Managers will ensure that the job site is safe and compliant to national standard.</p>
 
 
 
