--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					</div>
 																	<div class="site-header-main-section-right site-header-section site-header-section-right">
 						<div class="site-header-item site-header-focus-item" data-section="kadence_customizer_header_button">
-	<div class="header-button-wrap"><div class="header-button-inner-wrap"><a href="tel:9144690013" target="_self" class="button header-button button-size-custom button-style-filled">Office.modernconsulting@gmail.com</a><a href="tel:9144690013" target="_self" class="button header-button button-size-custom button-style-filled">914-469-0013</a></div></div></div><!-- data-section="header_button" -->
+	<div class="header-button-wrap"><div class="header-button-inner-wrap"><a href="mailto:Office.modernconsulting@gmail.com" target="_self" class="button header-button button-size-custom button-style-filled">Email US</a><a href="tel:9144690013" target="_self" class="button header-button button-size-custom button-style-filled">914-469-0013</a></div></div></div><!-- data-section="header_button" -->
 					</div>
 							</div>
 		</div>
