--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 
 
-<p class="kt-adv-heading28_f292be-10 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading28_f292be-10">Over 20 years of construction management experience.  We are committed to helping businesses of all sizes achieve and maintain a culture of safety.  Our team is passionate about preventing accidents, reducing injuries, and improving overall workplace safety.</p>
+<p class="kt-adv-heading28_f292be-10 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading28_f292be-10">Over 20 years of construction management experience in the NYC area.  We are committed to helping businesses of all sizes achieve and maintain a culture of safety.  Our team is passionate about preventing accidents, reducing injuries, and improving overall workplace safety.</p>
 </div></div>
 </div></div>
 
