--- a/index.html
+++ b/index.html
@@ -744,18 +744,12 @@
 	<style id="core-block-supports-inline-css">
 .wp-container-core-columns-is-layout-1{flex-wrap:nowrap;}
 </style>
-<meta name="description" content="Discover Modern Consulting(www.modernconsulting.net): Expert site safety management, DOB-certified services, and licensed safety managers to ensure compliance and safety on every project.">
 <script id="kadence-navigation-js-extra">
 var kadenceConfig = {"screenReader":{"expand":"Child menu","expandOf":"Child menu of","collapse":"Child menu","collapseOf":"Child menu of"},"breakPoints":{"desktop":"1024","tablet":768},"scrollOffset":"0"};
 </script>
-<script src="min.js" id="kadence-navigation-js" async=""></script>
+<script src="min2.js" id="kadence-navigation-js" async=""></script>
 <script id="kadence-blocks-form-js-extra">
-
-// var kadence_blocks_form_params = {"ajaxurl":"https:\/\/www.Modern_Consulting.com\/wp-admin\/admin-ajax.php","error_message":"Please fix the errors to proceed","nonce":"079ff6c97a","required":"is required","mismatch":"does not match","validation":"is not valid","duplicate":"requires a unique entry and this value has already been used","item":"Item"};
 </script>
-
-
-<script src="min.js" id="kadence-blocks-form-js"></script>
 <script>const rowLayout = document.querySelector('.kb-row-layout-wrap.kb-row-layout-id28_a1e586-9f');
 rowLayout.style.backgroundImage = 'url("P_back2.png")';</script>
 
