Added DOB license

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
 
 
-<p class="kt-adv-heading28_165b27-ff wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_165b27-ff">Our team's competent superintendents will inspect your job site daily with the utmost attention to detail.</p>
+<p class="kt-adv-heading28_165b27-ff wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_165b27-ff">Our team's DOB Licensed superintendents will inspect your job site daily with the utmost attention to detail.</p>
 
 
 
@@ -371,7 +371,7 @@
 
 
 
-<p class="kt-adv-heading28_ca0eea-d0 wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_ca0eea-d0">Our certified Managers will ensure that the job site is safe and compliant to national standard.</p>
+<p class="kt-adv-heading28_ca0eea-d0 wp-block-kadence-advancedheading has-theme-palette-3-color has-text-color" data-kb-block="kb-adv-heading28_ca0eea-d0">Our DOB Licensed Managers will ensure that the job site is safe and compliant to national standard.</p>
 
 
 
