--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 	<div class="kb-row-layout-wrap kb-row-layout-id28_a1e586-9f alignfull has-theme-palette8-background-color kt-row-has-bg kb-divider-static wp-block-kadence-rowlayout"><div class="kt-row-layout-overlay kt-row-overlay-normal"></div><div class="kt-row-layout-bottom-sep kt-row-sep-type-crvi"><svg viewBox="0 0 1000 100" preserveAspectRatio="none"><path d="M1000,0c0,0 -270.987,98 -500,98c-229.013,0 -500,-98 -500,-98l0,100l1000,0l0,-100Z"></path></svg></div><div class="kt-row-column-wrap kt-has-2-columns kt-row-layout-equal kt-tab-layout-left-golden kt-mobile-layout-row kt-row-valign-middle kb-theme-content-width">
 
 <div class="wp-block-kadence-column kadence-column28_e989f8-6c inner-column-1"><div class="kt-inside-inner-col">
-<h2 class="kt-adv-heading28_2f65ec-24 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading28_2f65ec-24">Welcome to Modern Consulting!</h2>
+<h2 class="kt-adv-heading28_2f65ec-24 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading28_2f65ec-24">Welcome to Modern Consulting NYC!</h2>
 
 
 
