--- a/index.html
+++ b/index.html
@@ -1125,6 +1125,15 @@ rowLayout.style.backgroundImage = 'url("P_back2.png")';</script>
     }
 } 
 
+.wp-block-kadence-advancedheading.kt-adv-heading28_2f65ec-24,
+.wp-block-kadence-advancedheading.kt-adv-heading28_2f65ec-24[data-kb-block="kb-adv-heading28_2f65ec-24"] {
+  margin-top:0px;
+  margin-bottom:var(--global-kb-spacing-sm, 1.5rem);
+  font-size:80px;
+  line-height:1;
+  text-transform:uppercase;
+  color:#ffffff;
+}
 
 
 </style>
