--- a/index.html
+++ b/index.html
@@ -1134,6 +1134,33 @@ rowLayout.style.backgroundImage = 'url("P_back2.png")';</script>
   text-transform:uppercase;
   color:#ffffff;
 }
+.wp-block-kadence-advancedheading.kt-adv-heading28_2f65ec-24,
+.wp-block-kadence-advancedheading.kt-adv-heading28_2f65ec-24[data-kb-block="kb-adv-heading28_2f65ec-24"] {
+  margin-top: 0px;
+  margin-bottom: var(--global-kb-spacing-sm, 1.5rem);
+  font-size: 80px;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #ffffff;
+}
 
+
+
+@media (max-width: 768px) { /* Mobile landscape */
+  .wp-block-kadence-advancedheading.kt-adv-heading28_2f65ec-24,
+  .wp-block-kadence-advancedheading.kt-adv-heading28_2f65ec-24[data-kb-block="kb-adv-heading28_2f65ec-24"] {
+    font-size: 40px; /* Smaller font for mobile */
+    line-height: 1.2; /* Adjust line height for readability */
+    margin-bottom: 0.75rem; /* Reduce margin for smaller screens */
+  }
+}
+
+@media (max-width: 480px) { /* Mobile portrait */
+  .wp-block-kadence-advancedheading.kt-adv-heading28_2f65ec-24,
+  .wp-block-kadence-advancedheading.kt-adv-heading28_2f65ec-24[data-kb-block="kb-adv-heading28_2f65ec-24"] {
+    font-size: 30px; /* Even smaller font for very small screens */
+    line-height: 1.3; /* Adjust further for compact readability */
+  }
+}
 
 </style>
